calc.output
Terminals unused in grammar

   exit_command


Grammar

    0 $accept: line $end

    1 line: assignment ';'
    2     | line assignment ';'
    3     | print variable ';'
    4     | line print variable ';'

    5 assignment: variable '=' polynom

    6 polynom: minus polynom
    7        | brackets
    8        | brackets brackets
    9        | polynom minus polynom
   10        | polynom '+' polynom
   11        | polynom '*' polynom
   12        | monom

   13 brackets: '(' polynom ')'

   14 monom: symbol
   15      | symbol monom
   16      | variable
   17      | symbol '^' number

   18 symbol: number
   19       | term


Terminals, with rules where they appear

$end (0) 0
'(' (40) 13
')' (41) 13
'*' (42) 11
'+' (43) 10
';' (59) 1 2 3 4
'=' (61) 5
'^' (94) 17
error (256)
print (258) 3 4
exit_command (259)
minus (260) 6 9
number (261) 17 18
variable (262) 3 4 5 16
term (263) 19
NEG (264)


Nonterminals, with rules where they appear

$accept (17)
    on left: 0
line (18)
    on left: 1 2 3 4, on right: 0 2 4
assignment (19)
    on left: 5, on right: 1 2
polynom (20)
    on left: 6 7 8 9 10 11 12, on right: 5 6 9 10 11 13
brackets (21)
    on left: 13, on right: 7 8
monom (22)
    on left: 14 15 16 17, on right: 12 15
symbol (23)
    on left: 18 19, on right: 14 15 17


State 0

    0 $accept: . line $end

    print     shift, and go to state 1
    variable  shift, and go to state 2

    line        go to state 3
    assignment  go to state 4


State 1

    3 line: print . variable ';'

    variable  shift, and go to state 5


State 2

    5 assignment: variable . '=' polynom

    '='  shift, and go to state 6


State 3

    0 $accept: line . $end
    2 line: line . assignment ';'
    4     | line . print variable ';'

    $end      shift, and go to state 7
    print     shift, and go to state 8
    variable  shift, and go to state 2

    assignment  go to state 9


State 4

    1 line: assignment . ';'

    ';'  shift, and go to state 10


State 5

    3 line: print variable . ';'

    ';'  shift, and go to state 11


State 6

    5 assignment: variable '=' . polynom

    minus     shift, and go to state 12
    number    shift, and go to state 13
    variable  shift, and go to state 14
    term      shift, and go to state 15
    '('       shift, and go to state 16

    polynom   go to state 17
    brackets  go to state 18
    monom     go to state 19
    symbol    go to state 20


State 7

    0 $accept: line $end .

    $default  accept


State 8

    4 line: line print . variable ';'

    variable  shift, and go to state 21


State 9

    2 line: line assignment . ';'

    ';'  shift, and go to state 22


State 10

    1 line: assignment ';' .

    $default  reduce using rule 1 (line)


State 11

    3 line: print variable ';' .

    $default  reduce using rule 3 (line)


State 12

    6 polynom: minus . polynom

    minus     shift, and go to state 12
    number    shift, and go to state 13
    variable  shift, and go to state 14
    term      shift, and go to state 15
    '('       shift, and go to state 16

    polynom   go to state 23
    brackets  go to state 18
    monom     go to state 19
    symbol    go to state 20


State 13

   18 symbol: number .

    $default  reduce using rule 18 (symbol)


State 14

   16 monom: variable .

    $default  reduce using rule 16 (monom)


State 15

   19 symbol: term .

    $default  reduce using rule 19 (symbol)


State 16

   13 brackets: '(' . polynom ')'

    minus     shift, and go to state 12
    number    shift, and go to state 13
    variable  shift, and go to state 14
    term      shift, and go to state 15
    '('       shift, and go to state 16

    polynom   go to state 24
    brackets  go to state 18
    monom     go to state 19
    symbol    go to state 20


State 17

    5 assignment: variable '=' polynom .
    9 polynom: polynom . minus polynom
   10        | polynom . '+' polynom
   11        | polynom . '*' polynom

    minus  shift, and go to state 25
    '+'    shift, and go to state 26
    '*'    shift, and go to state 27

    $default  reduce using rule 5 (assignment)


State 18

    7 polynom: brackets .
    8        | brackets . brackets

    '('  shift, and go to state 16

    $default  reduce using rule 7 (polynom)

    brackets  go to state 28


State 19

   12 polynom: monom .

    $default  reduce using rule 12 (polynom)


State 20

   14 monom: symbol .
   15      | symbol . monom
   17      | symbol . '^' number

    number    shift, and go to state 13
    variable  shift, and go to state 14
    term      shift, and go to state 15
    '^'       shift, and go to state 29

    $default  reduce using rule 14 (monom)

    monom   go to state 30
    symbol  go to state 20


State 21

    4 line: line print variable . ';'

    ';'  shift, and go to state 31


State 22

    2 line: line assignment ';' .

    $default  reduce using rule 2 (line)


State 23

    6 polynom: minus polynom .
    9        | polynom . minus polynom
   10        | polynom . '+' polynom
   11        | polynom . '*' polynom

    '*'  shift, and go to state 27

    $default  reduce using rule 6 (polynom)


State 24

    9 polynom: polynom . minus polynom
   10        | polynom . '+' polynom
   11        | polynom . '*' polynom
   13 brackets: '(' polynom . ')'

    minus  shift, and go to state 25
    '+'    shift, and go to state 26
    '*'    shift, and go to state 27
    ')'    shift, and go to state 32


State 25

    9 polynom: polynom minus . polynom

    minus     shift, and go to state 12
    number    shift, and go to state 13
    variable  shift, and go to state 14
    term      shift, and go to state 15
    '('       shift, and go to state 16

    polynom   go to state 33
    brackets  go to state 18
    monom     go to state 19
    symbol    go to state 20


State 26

   10 polynom: polynom '+' . polynom

    minus     shift, and go to state 12
    number    shift, and go to state 13
    variable  shift, and go to state 14
    term      shift, and go to state 15
    '('       shift, and go to state 16

    polynom   go to state 34
    brackets  go to state 18
    monom     go to state 19
    symbol    go to state 20


State 27

   11 polynom: polynom '*' . polynom

    minus     shift, and go to state 12
    number    shift, and go to state 13
    variable  shift, and go to state 14
    term      shift, and go to state 15
    '('       shift, and go to state 16

    polynom   go to state 35
    brackets  go to state 18
    monom     go to state 19
    symbol    go to state 20


State 28

    8 polynom: brackets brackets .

    $default  reduce using rule 8 (polynom)


State 29

   17 monom: symbol '^' . number

    number  shift, and go to state 36


State 30

   15 monom: symbol monom .

    $default  reduce using rule 15 (monom)


State 31

    4 line: line print variable ';' .

    $default  reduce using rule 4 (line)


State 32

   13 brackets: '(' polynom ')' .

    $default  reduce using rule 13 (brackets)


State 33

    9 polynom: polynom . minus polynom
    9        | polynom minus polynom .
   10        | polynom . '+' polynom
   11        | polynom . '*' polynom

    '*'  shift, and go to state 27

    $default  reduce using rule 9 (polynom)


State 34

    9 polynom: polynom . minus polynom
   10        | polynom . '+' polynom
   10        | polynom '+' polynom .
   11        | polynom . '*' polynom

    minus  shift, and go to state 25
    '*'    shift, and go to state 27

    $default  reduce using rule 10 (polynom)


State 35

    9 polynom: polynom . minus polynom
   10        | polynom . '+' polynom
   11        | polynom . '*' polynom
   11        | polynom '*' polynom .

    '*'  shift, and go to state 27

    $default  reduce using rule 11 (polynom)


State 36

   17 monom: symbol '^' number .

    $default  reduce using rule 17 (monom)
